--- a/index.html
+++ b/index.html
@@ -64,6 +64,36 @@
             </div>
         </div>
         <section class="section section-1">
+            <div class="draw-s1">
+                <div class="draw-round">
+                    <div class="draw-round-line-point r1p1">
+                        <div class="draw-round-point p1"></div>
+                        <div class="draw-round-point p2"></div>
+                        <div class="draw-round-point p3"></div>
+                    </div>
+                    <div class="draw-round-line-point r2p1">
+                        <div class="draw-round-point p4"></div>
+                    </div>   
+                    <div class="draw-line l1">
+                        <div class="draw-line-point l1p1"></div>
+                        <div class="draw-line-point l1p2"></div>
+                    </div>
+                    <div class="draw-line l2">
+                        <div class="draw-line-point l2p1"></div>
+                        <div class="draw-line-point l2p2"></div>
+                    </div>
+                    <div class="draw-line l3">
+                        <div class="draw-line-point l3p1"></div>
+                        <div class="draw-line-point l3p2"></div>
+                    </div>
+                    <div class="draw-line l4">
+                        <div class="draw-line-point l4p1"></div>
+                        <div class="draw-line-point l4p2"></div>
+                    </div>               
+                    
+                </div>
+                
+            </div>
             <div class="container">
                 <div class="about-header">АО «Институт навигации» является ведущим предприятием в космической отрасли по направлению навигационных технологий</div>
                 <div class="aboute-content">
